@@ -479,6 +479,7 @@ $Id$
  * xa: XA demuxer
  * xcb_apps: List the application windows using XCB
  * xcb_hotkeys: module to catch hotkeys when application doesn't have the focus
+ * xcb_render: RENDER video output using XCB
  * xcb_screen: input module that takes screenshots of the primary monitor
  * xcb_window: XCB window provider
  * xcb_x11: a X11 video output using XCB
